improvement: fix toolbar shadow z-index
Change z-index of top toolbar so that the shadow is on top of the auxiliary editor on the right.

--- a/assets/style/variables/z-indexes.scss
+++ b/assets/style/variables/z-indexes.scss
@@ -1,3 +1,4 @@
+$z-index-bar: 1100;
 $z-index-unselected-state: 900;
 $z-index-selected-state: 905;
 $z-index-arrows: 1000;
